# repo-scripts

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml
repo_scripts/: __init__.py  close_pre_commit_pulls.py  protect_master.py  show_excluded_files.py  show_python_versions.py  update_labels.py  utils.py
