[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "repo-scripts"
version = "0.0.0"
description = "Scripts for administering repo-helper managed repositories."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/repo-scripts"
"Issue Tracker" = "https://github.com/domdfcoding/repo-scripts/issues"
"Source Code" = "https://github.com/domdfcoding/repo-scripts"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = []
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "repo_scripts"

[tool.importcheck]
always = [
    "repo_scripts.close_pre_commit_pulls",
    "repo_scripts.protect_master",
    "repo_scripts.show_excluded_files",
    "repo_scripts.show_python_version",
    "repo_scripts.update_labels",
]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dep_checker]
namespace_packages = [ "ruamel.yaml",]

[tool.dep_checker.name_mapping]
github3_py = "github3"
python_dotenv = "dotenv"
